...
  onConfirmPress: () => void
}

export function ReviewFooter({ txId, activeSigner, isSigningLoading, onConfirmPress }: ReviewFooterProps) {
  const insets = useSafeAreaInsets()

  const buttonText = isSigningLoading ? 'Validating' : 'Confirm transaction'
  const buttonDisabled = isSigningLoading

  return (
    <View
      backgroundColor="$background"
      paddingHorizontal="$4"
...
