...
        >
          <CircleSnail size={24} color={theme.color.get()} thickness={2} duration={600} spinDuration={1500} />
        </View>
      )}

      <SectionList
        testID={'pending-tx-list'}
        ListHeaderComponent={LargeHeader}
        sections={transactions || []}
        contentInsetAdjustmentBehavior="automatic"
        keyExtractor={keyExtractor}
        renderItem={renderItem}
        onEndReached={onEndReached}
...
