...
  imageSize?: string
  currency?: string
}

const fallbackChainConfig = {
  chainId: '-1',
  chainName: 'Unknown network',
  chainLogoUri: null,
  theme: {
    backgroundColor: '#ddd',
    textColor: '#000',
  },
}
...
