...
                <SafeFontIcon size={12} name="owners" />
                <Text
                  fontWeight={600}
                  color={'$color'}
                  fontSize="$2"
                  lineHeight={18}
                  testID="history-confirmations-info-badge-text"
                >
                  {detailedExecutionInfo?.confirmations?.length}/{detailedExecutionInfo?.confirmationsRequired}
                </Text>
              </View>
            }
            themeName="badge_success_variant1"
          />
          <SafeFontIcon name="chevron-right" size={16} />
        </View>
      }
      testID="history-confirmations-info"
    />
  )
}

